fix updating !